[package]
name = "async_demo"
version = "0.1.0"
edition = "2021"
authors = ["ArceOS Contributors"]

[dependencies]
axstd = { path = "../../ulib/axstd", features = ["alloc", "multitask", "irq"] }
axasync = { path = "../../modules/axasync", features = ["multitask", "timer"] }
axruntime = { path = "../../modules/axruntime", features = ["axasync-timer"] }

[features]
default = ["axstd/default"]
