[package]
name = "async_net_demo"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { workspace = true, features = ["alloc", "irq", "net"] }
axruntime = { workspace = true, features = ["alloc", "net"] }
axlog = { workspace = true }
axalloc = { workspace = true, features = ["tlsf"] }
axasync = { workspace = true, features = ["net", "alloc"] }
axnet = { workspace = true }

[features]
default = ["axstd/default"]
