[package]
name = "mmio_async"
version = "0.1.0"
edition = "2021"
authors = ["Rust for Arceos <dev@arceos.io>"]

[dependencies]
axdriver = { workspace = true, features = ["virtio", "bus-mmio", "net"] }
axhal = { workspace = true, features = ["mmio"] }

axstd = { path = "../../ulib/axstd", features = ["alloc", "irq", "net"] }
axruntime = { path = "../../modules/axruntime", features = ["alloc", "net"] }
axlog = { path = "../../modules/axlog" }
axalloc = { path = "../../modules/axalloc", features = ["tlsf"] }
axasync = { path = "../../modules/axasync", features = ["mmio", "alloc"] }
axnet = { path = "../../modules/axnet", features = ["async"] }


[features]
default = ["axstd/default"]
