[package]
name = "axdriver"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "ChengXiang Qi <kuangjux@outlook.com>",
]
description = "ArceOS device drivers"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axdriver"
documentation = "https://arceos-org.github.io/arceos/axdriver/index.html"

[features]
dyn = []
bus-mmio = []
bus-pci = ["dep:axdriver_pci", "dep:axhal", "dep:axconfig"]
net = ["axdriver_net"]
block = ["axdriver_block"]
display = ["axdriver_display"]
irq = ["dep:axhal", "axhal/irq", "dep:kspin", "dep:lazyinit"]

# Enabled by features `virtio-*`
virtio = ["axdriver_virtio", "dep:axalloc", "dep:axhal", "dep:axconfig"]

# various types of drivers
virtio-blk = ["block", "virtio", "axdriver_virtio/block"]
virtio-net = ["net", "virtio", "axdriver_virtio/net"]
virtio-gpu = ["display", "virtio", "axdriver_virtio/gpu"]
ramdisk = ["block", "axdriver_block/ramdisk"]
bcm2835-sdhci = ["block", "axdriver_block/bcm2835-sdhci"]
ixgbe = ["net", "axdriver_net/ixgbe", "dep:axalloc", "dep:axhal", "dep:axdma"]
fxmac = ["net", "axdriver_net/fxmac", "dep:axalloc", "dep:axhal", "dep:axdma"]
# more devices example: e1000 = ["net", "axdriver_net/e1000"]
dwmac = [
    "net",
    "irq",
    "axdriver_net/dwmac",
    "dep:axalloc",
    "dep:axhal",
    "dep:axdma",
]

default = ["bus-pci"]

[dependencies]
log = "=0.4.21"
cfg-if = "1.0"
crate_interface = "0.1.4"
axdriver_base = { workspace = true }
axdriver_block = { workspace = true, optional = true }
axdriver_net = { workspace = true, optional = true }
axdriver_display = { workspace = true, optional = true }
axdriver_pci = { workspace = true, optional = true }
axdriver_virtio = { workspace = true, optional = true }
axalloc = { workspace = true, optional = true }
axhal = { workspace = true, optional = true }
axconfig = { workspace = true, optional = true }
axdma = { workspace = true, optional = true }
kspin = { version = "0.1", optional = true }
lazyinit = { version = "0.2", optional = true }

# StarFive VisionFive 2 Platform Access Crate
jh7110-vf2-13b-pac = "0.2.0"
